--- a/redis-data-tkg.yml
+++ b/redis-data-tkg.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: redis-server
   annotations:
-    volume.beta.kubernetes.io/storage-class: wcp-storage-policy
+    volume.beta.kubernetes.io/storage-class: default
 spec:
   accessModes:
     - ReadWriteOnce
